--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>23.0.0-SNAPSHOT</version>
+    <version>23.0.0</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -374,5 +374,9 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>okta-sdk-root-23.0.0</tag>
+  </scm>
 </project>
 
