fix: add Okta to IdentityProviderType for Idp Discovery Rule Creation

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -53789,6 +53789,7 @@ components:
         - XERO
         - YAHOO
         - YAHOOJP
+        - OKTA
     IdentitySourceSession:
       type: object
       properties:
