OpenApi: add missing description to userSchema

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -66380,6 +66380,9 @@ components:
           type: string
           readOnly: true
           description: Timestamp when the Schema was created
+        description:
+          type: string
+          description: The description of the Schema
         definitions:
           allOf:
             - $ref: '#/components/schemas/UserSchemaDefinitions'
