adding 'app' field to save the defaultrelaystate

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -61317,6 +61317,10 @@ components:
           properties:
             signOn:
               $ref: '#/components/schemas/SamlApplicationSettingsSignOn'
+            app:
+              type: object
+              additionalProperties: true
+              description: Required placeholder to save defaultRelayState
     SamlApplicationSettingsSignOn:
       description: |-
         SAML 2.0 sign-on attributes.
