adding maven repository configurations

--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,18 @@
                         <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.4.0</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <publishingServerId>central-portal-staging</publishingServerId>
+                        <tokenAuth>true</tokenAuth>
+                        <autoPublish>true</autoPublish>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -378,5 +390,16 @@
   <scm>
     <tag>okta-sdk-root-23.0.0</tag>
   </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>central-portal-staging</id>
+            <url>https://central.sonatype.com/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>central-portal-staging</id>
+            <url>https://central.sonatype.com/content/repositories/releases</url>
+        </repository>
+    </distributionManagement>
 </project>
 
