OpenApi: fix return type of /oauth2/v1/clients/{clientId}/roles

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -24424,9 +24424,11 @@ paths:
           content:
             application/json:
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/StandardRole'
-                  - $ref: '#/components/schemas/CustomRole'
+                type: array
+                items:
+                  oneOf:
+                    - $ref: '#/components/schemas/StandardRole'
+                    - $ref: '#/components/schemas/CustomRole'
               examples:
                 Standard Roles:
                   $ref: '#/components/examples/StandardRolesListResponseClient'
