--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>24.0.0</version>
+    <version>24.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -387,7 +387,7 @@
     </profiles>
 
   <scm>
-    <tag>okta-sdk-root-24.0.0</tag>
+    <tag>okta-sdk-root-23.0.0</tag>
   </scm>
 </project>
 
