--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
                 <artifactId>okta-commons-lang</artifactId>
                 <version>${okta.commons.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.18.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-http-api</artifactId>
