--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,11 @@
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>4.2.1</version> <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
