--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,8 @@
             <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
-                <version>4.2.1</version> <scope>test</scope>
+                <version>4.2.1</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
