--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,7 @@
                         <publishingServerId>central</publishingServerId>
                         <autoPublish>true</autoPublish>
                         <waitUntil>published</waitUntil>
+                        <ignorePublishedComponents>true</ignorePublishedComponents>
                     </configuration>
                 </plugin>
                 <plugin>
