--- a/api/pom.xml
+++ b/api/pom.xml
@@ -129,6 +129,10 @@
             <artifactId>handlebars-jackson2</artifactId>
             <version>4.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
