--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -80,6 +80,10 @@
             <version>2.27.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
