--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -51325,13 +51325,9 @@ components:
               description: <div class="x-lifecycle-container"><x-lifecycle class="ea"></x-lifecycle></div>The list of geolocations to include or exclude for an Enhanced Dynamic Network Zone
               properties:
                 include:
-                  allOf:
                     - $ref: '#/components/schemas/NetworkZoneLocationArray'
-                    - description: An array of geolocations to include for an Enhanced Dynamic Network Zone
                 exclude:
-                  allOf:
                     - $ref: '#/components/schemas/NetworkZoneLocationArray'
-                    - description: An array of geolocations to exclude for an Enhanced Dynamic Network Zone
             ipServiceCategories:
               x-okta-lifecycle:
                 lifecycle: EA
@@ -55129,6 +55125,7 @@ components:
           IP: '#/components/schemas/IPNetworkZone'
           DYNAMIC: '#/components/schemas/DynamicNetworkZone'
           DYNAMIC_V2: '#/components/schemas/EnhancedDynamicNetworkZone'
+          UNKNOWN: '#/components/schemas/NetworkZone'
     NetworkZoneAddress:
       description: Specifies the value of an IP address expressed using either `range` or `CIDR` form.
       type: object
@@ -55185,6 +55182,7 @@ components:
         - DYNAMIC
         - IP
         - DYNAMIC_V2
+        - UNKNOWN
     NetworkZoneUsage:
       description: The usage of the Network Zone
       type: string
