--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,6 +22,7 @@
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
         <version>24.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>okta-sdk-api</artifactId>
@@ -155,6 +156,22 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.build.directory}/generated-sources/openapi</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                    <failOnError>false</failOnError>
+                    <retryOnError>true</retryOnError>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
                 <version>2.23.0</version>
@@ -266,7 +283,7 @@
         <profile>
             <id>ci</id>
             <build>
-                <plugins>
+        <plugins>
                     <plugin>
                         <groupId>com.github.siom79.japicmp</groupId>
                         <artifactId>japicmp-maven-plugin</artifactId>
