--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -22,6 +22,7 @@
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
         <version>24.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>okta-sdk-examples</artifactId>
