--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>23.0.1</version>
+                <version>{project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>23.0.1</version>
+                <version>{project.version}</version>
             </dependency>
 
             <dependency>
@@ -85,13 +85,13 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>23.0.1</version>
+                <version>{project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>23.0.1</version>
+                <version>{project.version}</version>
             </dependency>
 
             <dependency>
