--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-api</artifactId>
-            <version>23.0.1</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
