--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright 2017 Okta
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -49,6 +64,7 @@
                 <type>pom</type>
             </dependency>
 
+            <!-- Inter project dependencies -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
@@ -60,6 +76,7 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <!-- Other Okta Projects -->
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-config-check</artifactId>
@@ -82,18 +99,21 @@
                 <version>1.3.2</version>
             </dependency>
 
+            <!-- ITs -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
+            <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
+            <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -122,6 +142,7 @@
                 <version>${bouncycastle.version}</version>
             </dependency>
 
+            <!-- JJWT -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
@@ -192,6 +213,7 @@
 
     <dependencies>
 
+        <!-- Test dependencies -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -235,6 +257,9 @@
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
+                        <!--<forkCount>2C</forkCount>
+                        <parallel>classes</parallel>
+                        <threadCount>5</threadCount>-->
                     </configuration>
                 </plugin>
                 <plugin>
@@ -242,13 +267,16 @@
                     <artifactId>maven-pmd-plugin</artifactId>
                     <configuration>
                         <excludeRoots>
+                            <!-- exclude the generated code from PMD, Findbugs will still run -->
                             <excludeRoot>${project.build.directory}/generated-sources/openapi</excludeRoot>
                         </excludeRoots>
                         <excludes>
+                            <!-- lang contains a few files copied from other projects -->
                             <exclude>**/lang/*.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/Base64.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/BaseNCodec.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/LinkedCaseInsensitiveMap</exclude>
+                            <!-- caching needs a little work -->
                             <exclude>**/com/okta/sdk/impl/ds/cache/WriteCacheFilter.java</exclude>
                         </excludes>
                     </configuration>
@@ -257,6 +285,7 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <configuration>
+                        <!-- exclude generated enums coverage -->
                         <excludes>
 
                             <exclude>**/quickstart/**/*</exclude>
@@ -329,6 +358,7 @@
                     <artifactId>dependency-check-maven</artifactId>
                     <version>12.1.0</version>
                     <configuration>
+                        <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                         <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
                     </configuration>
@@ -384,3 +414,4 @@
         <tag>okta-sdk-root-23.0.0</tag>
     </scm>
 </project>
+
