--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     resource_class: large
-    parallelism: 3
+    parallelism: 2
     steps: *build_steps
 
   jdk21:
@@ -44,7 +44,7 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     resource_class: large
-    parallelism: 3
+    parallelism: 2
     steps: *build_steps
 
   snyk-scan:
@@ -63,6 +63,7 @@ jobs:
   reversing-labs:
     docker:
       - image: cimg/openjdk:21.0.2-node
+    resource_class: large
     steps:
       - checkout
       - run: npm install
