ci: Increase resources for ReversingLabs scan to prevent OOM
- Add resource_class: xlarge to reversing-labs job (same as jdk11/jdk21)
- Increase no_output_timeout to 45m for scanner step
- Prevents SIGKILL (exit 9) when scanning 5,600+ files

Fixes: ReversingLabs scanner consistently failing with memory exhaustion

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
   reversing-labs:
     docker:
       - image: cimg/openjdk:21.0.2-node
+    resource_class: xlarge
     steps:
       - checkout
       - run: npm install
@@ -95,6 +96,7 @@ jobs:
       # Run the wrapper, do not change anything here
       - run:
           name: Run Reversing Labs Wrapper Scanner
+          no_output_timeout: 45m
           command: |
             echo "Scanning " ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api
             rl-wrapper \
