Fix Flaky Integration Tests and CI Configuration Issues (#1655)
* fix: Correct page counting logic in testPagedIterableWithGroupMembers

The test was failing because the page counting logic only incremented
when collectedMembers.size() was divisible by the page limit (2).
With an odd number of total members (e.g., 3), this resulted in
pageCount staying at 1 instead of properly reflecting multiple pages.

Fixed by:
- Starting pageCount at 1 (since we always fetch at least one page)
- Tracking previousSize to detect when we cross page boundaries
- Incrementing pageCount when we've collected more items after
  hitting a page boundary (previousSize % 2 == 0)

This ensures the test correctly validates that pagination is working
across multiple API pages even when the total items is not evenly
divisible by the page limit.

* fix: Address PMD code quality violations

- Collapsed nested if statements in MultiThreadingWarningUtil by combining
  conditions with && operator (lines 137-139 and 143-145)
- Removed unnecessary local variable 'url' in PagedIterator.parseNextLinkFromHeaders,
  returning the value directly (line 129)

These changes improve code readability and follow PMD best practices
without changing functionality.

* Adding delay for a testcases, and removing parallelism from CCI

* Increase memory allocation for the ReversingLabs scan step

* fix: Add proper eventual consistency handling for integration tests

- GroupsIT: Add 3s wait after group creation for search indexing
- UsersIT: Add 3s wait after user activation before listing
- PaginationIT: Increase wait to 5s for user indexing in filter tests
- IdpIT: Add comprehensive waits for IDP operations:
  * 3s after IDP creation
  * 2s after link/unlink operations
  * 2s before deletion
- All delays use Math.max(getTestOperationDelay(), minimumMs) pattern

Fixes flaky tests caused by eventual consistency in Okta API

* fix: Use UUID for unique user emails and add delays to linkedInIdpTest

- PaginationIT: Replace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,7 @@ jobs:
       - image: cimg/openjdk:11.0.22-node
     environment:
       JVM_OPTS: -Xmx3200m
-    resource_class: large
-    parallelism: 3
+    resource_class: xlarge
     steps: *build_steps
 
   jdk21:
@@ -43,8 +42,7 @@ jobs:
       - image: cimg/openjdk:21.0.2-node
     environment:
       JVM_OPTS: -Xmx3200m
-    resource_class: large
-    parallelism: 3
+    resource_class: xlarge
     steps: *build_steps
 
   snyk-scan:
@@ -63,6 +61,7 @@ jobs:
   reversing-labs:
     docker:
       - image: cimg/openjdk:21.0.2-node
+    resource_class: xlarge
     steps:
       - checkout
       - run: npm install
@@ -97,6 +96,7 @@ jobs:
       # Run the wrapper, do not change anything here
       - run:
           name: Run Reversing Labs Wrapper Scanner
+          no_output_timeout: 45m
           command: |
             echo "Scanning " ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api
             rl-wrapper \
