--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>24.0.2-SNAPSHOT</version>
+    <version>24.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -338,10 +338,13 @@
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
                     <version>12.1.0</version>
+
                     <configuration>
                         <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                         <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
+                        <ossIndexUsername>${env.OSS_EMAIL}</ossIndexUsername>
+                        <ossIndexPassword>${env.OSS_TOKEN}</ossIndexPassword>
                     </configuration>
                 </plugin>
             </plugins>
